Fix issue with the system/cores value not being received.

The systemmonitor data engine is 100% asynchronous.  Unfortunately this
makes polling any source impossible.  This caused a hard to pin down
bug related to certain cpu sources not being connected.  To correct this
the system/cores value is now properly polled.  This should avoid/fix
any issues with 'show usage of all processors' option.
BUG: 271918
FIXED-IN: 4.7.4